# the-wizard-express

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  Makefile  README.md  example.py  pyproject.toml  retriever_test.py  run_qa.py  run_train.sh  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: conf.py  modules.rst  the_wizard_express.cli.rst  the_wizard_express.corpus.rst  the_wizard_express.language_model.rst  the_wizard_express.qa.rst  the_wizard_express.reader.rst  the_wizard_express.retriever.rst  the_wizard_express.rst  the_wizard_express.tokenizer.rst  the_wizard_express.utils.rst
docs/_templates/: badges.html  github.html  moreinfo.html
logs/Distilled_bert_finalFeb20_19-31-34_hyperion/: events.out.tfevents.1613845916.hyperion.17466.0  events.out.tfevents.1613851009.hyperion.17466.2
logs/fist-attempt/: events.out.tfevents.1613784903.hyperion.23874.1
requirements/: dev.txt  prod.txt  test.txt
results_for_paper/: Tokenizer + Vocab.md  all_retrievers.json  distilled-bert.json  example of tf-idf matrix.md  pyserini-bert-on-bert-model.json  pyserini_squad.json  pyserini_trivia.json  retriever_results.json  retriever_results.txt  retriever_squad_only_big.json  rouge tfidf-bert-on-bert-model.json  tfidf-bert-on-bert-model.json  tfidf_different_docs_all_retrievers.json  tfidf_different_docs_only_word.json  tokenizers_logic.md
tests/: test_the_wizard_express.py
the_wizard_express/: __init__.py  __main__.py  api.py  cli.py  config.py
webapp/: package-lock.json  package.json
(+63 files in other folders)
