[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "the_wizard_express"
description = "Deep learning model for Q&A"
version = "0.1.0"

authors = ["Alexandros Dorodoulis", "Amalia Matei"]

readme = "README.md"

repository = "https://github.com/alexdor/the-wizard-express"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.9"
torch ="~1.7.1"
torchvision ="~0.8.1"
transformers ="~4.3.2"
datasets ="~1.2.1"
apache-beam ="~2.27.0"
Click ="~7.1.2"
typing_extensions ="~3.7.4"
tokenizers="~0.10.1"
inflect ="~4.1.0"
nltk ="~3.5"
scipy ="~1.5.4"
numpy ="^1.18.0"
tqdm = "~4.49.0"
tensorflow = "2.3.1"


[tool.poetry.dev-dependencies]
mypy = "^0.800"
flake8-pytest-style = "^1.3"
safety = "^1.10"
pytest = "^6.2"
pytest-cov = "^2.10"
pytest-randomly = "^3.5"
sphinx = "^3.4"
sphinx-autodoc-typehints = "^1.11"
doc8 = "^0.8"
m2r2 = "^0.2"
tomlkit = "^0.7"
flake8 = "^3.8.4"
bump2version = "^1.0.1"
wheel = "^0.35.1"
watchdog = "^0.10.3"
tox = "^3.20.1"
coverage = "^5.3"
twine = "^3.2.0"
pre-commit = "^2.7.1"
black = "^20.8b1"
bandit = "^1.7.0"
prospector = "^1.3.1"
